DATE       AUTHOR       CHANGE
---------- -----------  -------------------------------------------------------
2003-02-21 nonchocoboy  We have a running avatar.