@@ -1,3 +1,4 @@
 DATE       AUTHOR       CHANGE
 ---------- -----------  -------------------------------------------------------
+2003-02-21 nonchocoboy  Added motion blur (for drunkenness).
 2003-02-21 nonchocoboy  We have a running avatar.
